Quick fix to bleed issue

--- a/lib-docs/sass/docs.sass
+++ b/lib-docs/sass/docs.sass
@@ -22,11 +22,13 @@ body
 
 .bleed
   max-width: $xl-monitor
+  background: white
   margin: 0px auto
   display: block
   position: relative
   margin-bottom: -$footerHeight
   min-height: 100%
+  overflow: hidden
 
   @media screen and (min-width: $xxl-monitor)
     max-width: $xxl-monitor
